--- a/resources/js/Pages/Components/style.css
+++ b/resources/js/Pages/Components/style.css
@@ -2,6 +2,7 @@
 #about,
 #service,
 #whychooseus,
+#whowehelp,
 #contact {
     scroll-margin-top: 150px; /* Offset for fixed header (adjust as needed) */
 }
